# tcp-over-grpc

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: ci.yml
proto/: tcp-over-grpc.proto
src/: lib.rs  main.rs  rpc.rs  stream.rs
