[package]
name = "tcp-over-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
prost = "0.13.3"
tokio-stream = "0.1.16"
clap = { version = "4.5.19", features = ["derive"] }
pin-project = "1.1.6"

[build-dependencies]
tonic-build = "0.12.3"
